feat: viewing current user & logout
