# docs/swagger.json
@@ -6,7 +6,6 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "do ping",
                 "consumes": [
                     "application/json"
                 ],
@@ -31,12 +30,106 @@
                         "schema": {
                             "$ref": "#/definitions/api.TokenPair"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/logout": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Deletes the auth for the authenticated user",
+                "summary": "Logout the authenticated user",
+                "responses": {
+                    "204": {
+                        "description": "Successfully logged out"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns the GUID for the authenticated user",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get the GUID for the authenticated user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetMeResposne"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "api.ErrorResponse": {
+            "description": "Generic error response",
+            "type": "object",
+            "properties": {
+                "error": {
+                    "description": "Contains the error message",
+                    "type": "string"
+                }
+            }
+        },
+        "api.GetMeResposne": {
+            "description": "Contains the GUID for the authenticated user",
+            "type": "object",
+            "properties": {
+                "guid": {
+                    "type": "string",
+                    "example": "12345678-1234-1234-1234-123456789012"
+                }
+            }
+        },
         "api.LoginRequest": {
             "type": "object",
             "required": [
@@ -44,6 +137,7 @@
             ],
             "properties": {
                 "guid": {
+                    "description": "GUID for the user that is logging in",
                     "type": "string",
                     "example": "12345678-1234-1234-1234-123456789012"
                 }
@@ -61,6 +155,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Authorization header using the Bearer scheme",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
