# internal/api/error.go
@@ -1,0 +1,13 @@
+package api
+
+var (
+	InternalServerErrorResponse = ErrorResponse{Error: "Internal Server Error"}
+	BadRequestResponse          = ErrorResponse{Error: "Bad Request"}
+	UnauthorizedResponse        = ErrorResponse{Error: "Unauthorized"}
+)
+
+// @Description	Generic error response
+type ErrorResponse struct {
+	// Contains the error message
+	Error string `json:"error"`
+}
